# hybrid_code-hfemic_wave

./: .gitignore  CMakeLists.txt  LICENSE  README.md
00-runs/run1/: 1_sbatch.job  Inputs.h
00-runs/run2/: 1_sbatch.job  Inputs.h
00-runs/run3/: 1_sbatch.job  Inputs.h
00-runs/run4/: 1_sbatch.job  Inputs.h
00-runs/run5/: 1_sbatch.job  Inputs.h
cmake/: CompilerWarnings.cmake  Sanitizers.cmake  StandardProjectSettings.cmake
src/LibPIC/: CMakeLists.txt
src/LibPIC/PIC/: BorisPush.h  CartCoord.h  Config.h  CurviCoord.h  Geometry.cc  Geometry.h  GridArray.h  MaskingFunction.h  Particle.h  PlasmaDesc.h  Predefined.h  RandomReal.cc  RandomReal.h  RelativisticParticle.h  RelativisticVDF.h  RelativisticVDFVariant.h  Shape.h  TypeMaps.h  VDF.h  VDFHelper.h  VDFVariant.h
src/LibPIC/PIC/Geometry/: CurviBasis.h  MFABasis.h  MirrorGeometry.cc  MirrorGeometry.h
src/LibPIC/PIC/Misc/: RootFinder.h
src/LibPIC/PIC/Random/: BitReversedPattern.h  NRRandomEngine.h  splitmix64.h  xoroshiro128.h
src/LibPIC/PIC/RelativisticVDF/: CounterBeamVDF.cc  CounterBeamVDF.h  LossconeVDF.cc  LossconeVDF.h  MaxwellianVDF.cc  MaxwellianVDF.h  PartialShellVDF.cc  PartialShellVDF.h  TestParticleVDF.cc  TestParticleVDF.h
src/LibPIC/PIC/UTL/: Badge.h  Defer.h  Options.cc  Options.h  Range.h  lippincott.cc  lippincott.h  println.h
src/LibPIC/PIC/VDF/: CounterBeamVDF.cc  CounterBeamVDF.h  LossconeVDF.cc  LossconeVDF.h  MaxwellianVDF.cc  MaxwellianVDF.h  PartialShellVDF.cc  PartialShellVDF.h  TestParticleVDF.cc  TestParticleVDF.h
src/LibPIC/PIC/VT/: ComplexVector.h  FourTensor.h  FourTensorTemplate.h  FourVector.h  FourVectorTemplate.h  Matrix.h  Scalar.h  Tensor.h  TensorTemplate.h  Vector.h  VectorTemplate.h
src/LibPIC/test/: CMakeLists.txt  test-Badge.cc  test-BitReversedPattern.cc  test-BorisPush-relativistic_simple_harmonic_oscillator.nb  test-BorisPush.cc  test-Coordinates.cc  test-Defer.cc  test-Geometry.cc  test-GridArray.cc  test-MaskingFunction.cc  test-Matrix.cc  test-Misc.cc  test-Misc.h  test-NRRandomEngine.cc  test-Options.cc  test-Particle.cc  test-PlasmaDesc.cc  test-RandomReal.cc  test-Range.cc  test-RelativisticParticle.cc  test-RelativisticVDF.cc  test-RelativisticVDFVariant.cc  test-Scalar.cc  test-Shape.cc  test-Tensor.cc  test-TypeMaps.cc  test-VDF.cc  test-VDFVariant.cc  test-Vector.cc  test-main.cc  test-xoroshiro128.cc
src/hybrid_1d/: CMakeLists.txt  Driver.cc  Driver.h  InputWrapper.h  Macros.h  ParamSet.cc  ParamSet.h  main.cc
src/hybrid_1d/Boundary/: Delegate.cc  Delegate.h  DistributedParticleDelegate.cc  DistributedParticleDelegate.h  MasterDelegate.cc  MasterDelegate.h  SubdomainDelegate.cc  SubdomainDelegate.h  WorkerDelegate.cc  WorkerDelegate.h
src/hybrid_1d/Core/: BField.cc  BField.h  Charge.cc  Charge.h  ColdSpecies.cc  ColdSpecies.h  Current.cc  Current.h  Domain.cc  Domain.h  Domain.hh  Domain_CAMCL.cc  Domain_CAMCL.h  Domain_PC.cc  Domain_PC.h  EField.cc  EField.h  ExternalSource.cc  ExternalSource.h  ExternalSource.hh  PartSpecies.cc  PartSpecies.h  Species.cc  Species.h
src/hybrid_1d/Include/: Inputs.h
src/hybrid_1d/Recorder/: EnergyRecorder.cc  EnergyRecorder.h  FieldRecorder.cc  FieldRecorder.h  MomentRecorder.cc  MomentRecorder.h  ParticleRecorder.cc  ParticleRecorder.h  Recorder.cc  Recorder.h  Snapshot.cc  Snapshot.h  SnapshotGrid.cc  SnapshotGrid.h  SnapshotHash.h  SnapshotParticle.cc  SnapshotParticle.h  VHistogramLocalSample.h  VHistogramRecorder.cc  VHistogramRecorder.h
